--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Candal&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+@font-face {
+  font-family: "ptmono";
+  src: local("ptmono"),
+   url(~assets/ptmono.ttf) format("truetype");
+}
 
-.container {
+@font-face {
+  font-family: "chedder";
+  src: local("cedder"),
+   url(~assets/chedder.ttf) format("truetype");
+}
+/* .container {
   @apply max-w-7xl flex flex-col mx-auto pt-10 px-4 md:px-8 lg:px-10;
 }
 
@@ -10,8 +20,13 @@ button {
 
 .button-1 {
   @apply border-primary text-primary bg-secondary;
-}
+} */
 
+/* font size  */
+
+h1, h2 {
+  font-size: 48px;
+}
 .btn {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -37,4 +52,110 @@ button {
   cursor: pointer;
   display: inline-flex;
   align-items: center;
+}
+
+/* global styles are snake_case and scoped in components are kebeb-case */
+/* stylelint-disable */
+html, body {
+  height: 100%;
+}
+
+/* typography */
+/* stylelint-disable */
+p{
+  font-family: "ptmono";
+}
+h1,h2,h3,h4,h5,h6{
+  font-family: "chedder";
+}
+
+.chedder {
+  font-family: "chedder";
+}
+
+.ptmono {
+  font-family: 'ptmono'
+}
+
+
+/* color schema */
+/* stylelint-disable */
+
+.main_red_text {
+  color: #C10609;
+}
+
+.main_white_text {
+  color: white;
+}
+
+.main_red_background {
+  background: #C10609;
+}
+
+/* main padding and margins */
+/* stylelint-disable */
+
+.main_page_padding_left_right {
+  padding-left: 37px;
+  padding-right: 37px;
+}
+
+.content_padding {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+.grid_half {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+
+/* flex utility classes */
+/* stylelint-disable */
+
+.flex_row {
+  display: flex;
+}
+
+.flex_center {
+  justify-content: center;
+}
+
+.flex_align_center {
+  align-items: center;
+}
+
+.width_full {
+  width: 100%;
+}
+
+/* icon padding */
+
+.icon_margin_left {
+  margin-left: 16px;
+}
+
+.icon_margin_right {
+  margin-right: 16px;
+}
+
+.flex_end_row {
+  justify-content: flex-end;
+}
+
+.link_no_style {
+  text-decoration: none;
+}
+
+/* mobile global css */
+/* stylelint-disable */
+.mobile_display {
+  display: block;
+}
+@media (max-width: 360px) {
+  .mobile_display {
+      display: none;
+  }
 }
