--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 .formulate-input {
   margin-bottom: 1.5em;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
