--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -57,7 +57,7 @@
   -moz-appearance: none;
   appearance: none;
   border-radius: 0.3em;
-  border: 1px solid #cecece;
+  border: 1px solid #C10609;
   box-sizing: border-box;
   background-color: transparent;
   font-size: 0.9em;
@@ -303,16 +303,15 @@
   box-sizing: border-box;
   background-color: transparent;
   font-size: 0.9em;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
-    Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
+    Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol; */
   padding: 0.75em;
   display: block;
   width: 100%;
   font-weight: 400;
   line-height: 1.2em;
   margin: 0;
-  border: 1px solid #41b883;
-  background-color: #41b883;
+  background-color: black;
   color: #fff;
   min-width: 0;
   width: auto;
