chore: fixed bug when navigating back from band profile page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,7 @@ html, body {
 /* typography */
 /* stylelint-disable */
 p, li {
-  font-family: "ptmono";
+  font-family: "heebo";
 }
 
 
@@ -91,7 +91,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .ptmono {
-  font-family: 'ptmono'
+  font-family: 'heebo'
 }
 
 
