--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -260,7 +260,7 @@
   -moz-appearance: none;
   appearance: none;
   border-radius: 0.3em;
-  border: 1px solid #cecece;
+  border: 1px solid #c11a08;
   box-sizing: border-box;
   background-color: transparent;
   font-size: 0.9em;
@@ -714,7 +714,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  border: 2px dashed #a8a8a8;
+  border: 2px dashed #e81313;
   z-index: 2;
 }
 
