--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @font-face {
   font-family: "ptmono";
   src: local("ptmono"),
@@ -74,7 +75,7 @@ html, body {
 /* typography */
 /* stylelint-disable */
 p, li {
-  font-family: "heebo";
+  font-family: "ptmono";
 }
 
 
@@ -91,7 +92,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .ptmono {
-  font-family: 'heebo'
+  font-family: 'ptmono'
 }
 
 
